fix: mobile overflow modal

--- a/src/App.css
+++ b/src/App.css
@@ -130,7 +130,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  z-index: 5;
+  z-index: 7;
 }
 
 .Modal-nav > * {
